--- a/main.css
+++ b/main.css
@@ -502,3 +502,18 @@ Projects Page
       font-size:3.2em;
     }
 }
+
+/** Blog **/
+
+.blog-list {
+  background-color:white;
+  height:100%;
+}
+
+.blog-date {
+  color:grey;
+}
+
+.blog-title {
+  font-size:20px;
+}
