--- a/vcs_prep/vcs_week_4/blogger/app/views/articles/index.html.erb
+++ b/vcs_prep/vcs_week_4/blogger/app/views/articles/index.html.erb
@@ -5,8 +5,9 @@
     <li>
       <%= article.title %>
       <%= link_to article.title, article_path(article)%>
+      <%= link_to "Delete Article", article_path(article), method: :delete, data: {confirm: "Are you sure you want to delete that article?"} %>
     </li>
   <% end %>
 </ul>
 
-<% link_to "Create a New Article", new_article_path, class: 'new_article' %>
+<%= link_to "Create a New Article", new_article_path, class: 'new_article' %>
