--- a/vcs_prep/vcs_week_4/blogger/app/views/articles/show.html.erb
+++ b/vcs_prep/vcs_week_4/blogger/app/views/articles/show.html.erb
@@ -1,4 +1,7 @@
 <h1> Title: <%= @article.title %></h1>
 <p> Body: <%= @article.body %></p>
 
+
+<%= link_to "Delete Article", article_path(@article), method: :delete, data: {confirm: "Are you sure you want to delete that article?"} %>
+<%= link_to "Edit Article", edit_article_path(@article) %>
 <%= link_to "Back to Articles list", articles_path %>
