--- a/main.css
+++ b/main.css
@@ -165,7 +165,7 @@ About Page
 }
 
 .thumbnail-tech {
-  background-color:#8FBAC8;
+  background-color:#88e288 ;
 }
 
 .fix-height {
@@ -188,14 +188,14 @@ About Page
 
 .thumbnail-intro {
   margin-top:50px;
-  background-color:#8FBAC8;
+  background-color:#88e288 ;
 }
 
 .jumbotron.about {
   font-family:"Nunito";
   text-align:center;
   height:100%;
-  background-color:#8FBAC8;
+  background-color:#88e288 ;
   padding-bottom:15%;
 
  }
@@ -222,7 +222,7 @@ About Page
   height:100%;
   margin-bottom:0;
   margin-top:12%;
-  background-color:#8FBAC8;
+  background-color:#88e288 ;
   padding-bottom:30px;
  }
 
